--- a/template/login.html
+++ b/template/login.html
@@ -34,7 +34,7 @@
                 <form method="post" class="bg-light p-4 rounded mt-5">
                     {% csrf_token %}
                     <div class="text-center mb-4">
-                        <img src="{% static 'images/DASH.jpg' %}" alt="Your Logo" height="80">
+                        <img src="{% static 'images/.jpg' %}" alt="Your Logo" height="80">
                     </div>
 
                    <div class="form-outline mb-4">
@@ -63,7 +63,6 @@
         </div>
     </div>
 
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
