last version login

--- a/template/login.html
+++ b/template/login.html
@@ -34,7 +34,7 @@
                 <form method="post" class="bg-light p-4 rounded mt-5">
                     {% csrf_token %}
                     <div class="text-center mb-4">
-                        <img src="{% static 'images/.jpg' %}" alt="Your Logo" height="80">
+                        <img src="{% static 'images/DASH.jpg' %}" alt="Your Logo" height="80">
                     </div>
 
                    <div class="form-outline mb-4">
