last version login

--- a/template/login.html
+++ b/template/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <style>
         body {
-            background-image: url("{% static 'images/background_image.avif' %}");
+            background-image: url("https://t4.ftcdn.net/jpg/01/98/81/81/360_F_198818112_qkFPeqqQuZyB7ososW9yHhrW5SHHJxU0.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -34,7 +34,7 @@
                 <form method="post" class="bg-light p-4 rounded mt-5">
                     {% csrf_token %}
                     <div class="text-center mb-4">
-                        <img src="{% static 'images/DASH.jpg' %}" alt="Your Logo" height="80">
+                        <img src="https://banner2.cleanpng.com/20180720/ryu/kisspng-logo-internet-of-things-narrowband-iot-universal-w-iot-5b5217f669ae57.0814247515321067424329.jpg" alt="Your Logo" height="80">
                     </div>
 
                    <div class="form-outline mb-4">
