--- a/template/navBar.html
+++ b/template/navBar.html
@@ -13,7 +13,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="../static/images/img.png" alt="Your Logo" height="40">
+                <img src="https://banner2.cleanpng.com/20180720/ryu/kisspng-logo-internet-of-things-narrowband-iot-universal-w-iot-5b5217f669ae57.0814247515321067424329.jpg" alt="Your Logo" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
